Fixed button overlapping with bio in coachItem

--- a/src/components/CoachItem.css
+++ b/src/components/CoachItem.css
@@ -75,7 +75,7 @@ body {
   }
 
   .bio {
-    height: 100%;
+    height: auto;
   }
 }
 
@@ -86,6 +86,6 @@ body {
   }
 
   .bio {
-    height: 100%;
+    height: auto;
   }
 }
